[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 20.0

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="Stars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, 0)
emitting = true
amount = 100
lifetime = 8.0
preprocess = 5.0
emission_shape = 3
emission_rect_extents = Vector2(640, 10)
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
scale_amount_min = 0.5
scale_amount_max = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(640, 600)
script = ExtResource("2_player")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_player")

[node name="FireTimer" type="Timer" parent="Player"]
wait_time = 0.15
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="Player"]
wait_time = 1.0
one_shot = true

[node name="Muzzle" type="Marker2D" parent="Player"]
position = Vector2(0, -30)

[node name="EnemySpawner" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Score: 0"

[node name="WaveLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
text = "Wave: 1"

[node name="HPBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 680.0
offset_right = 220.0
offset_bottom = 700.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 230.0
offset_top = 678.0
offset_right = 330.0
offset_bottom = 702.0
text = "100 / 100"

[connection signal="timeout" from="EnemySpawner" to="." method="_on_enemy_spawner_timeout"]
